# POUK_lab_6

./: README.md
src/my_navigation/: CMakeLists.txt  navi.rviz  package.xml
src/my_navigation/launch/: gmapping_low.launch  navi.py  navigation.py  navigation_amcl.py  save_map.launch
src/my_navigation/launch/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.py
src/patrol_bot/: CMakeLists.txt  package.xml
src/patrol_bot/config/: bridge.yaml
src/patrol_bot/src/: patrol_bot_node.cpp
